[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "outlty-mcp"
version = "0.1.0"
description = "MCP server for routes as MCP tools"
readme = "README.md"
authors = [{ name = "OutlyLabs" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.2.0",
  "httpx>=0.27.0",
  "anyio>=4.0.0",
]

[project.urls]
Homepage = "https://outlylabs.com"

[project.scripts]
# Expose console script for uvx: `uvx outlty-mcp`
outlty-mcp = "server:main"

[tool.setuptools]
# Single-module package
py-modules = ["server"]
